// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preview - encrypted 1`] = `
<div
  class="encrypted"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
  </div>
  <div
    class="encryptedCentered"
  >
    <span>
      Архив защищен паролем.
Для просмотра сохраните архив на компьютер.
    </span>
  </div>
</div>
`;

exports[`preview - no selected file 1`] = `
<div
  class="tip"
>
  <span>
    Теперь можно просматривать
и извлекать отдельные файлы из архива
  </span>
</div>
`;

exports[`preview - not viewable, both actions 1`] = `
<div
  class="noPreview"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
    <lego-components_button
      classname="iconButton iconButtonRight"
      disabled="false"
      icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  iconSize: \\"l\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    />
    <lego-components_button
      classname="iconButton"
      disabled="false"
      icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"l\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    />
  </div>
  <div
    class="noPreviewCentered"
  >
    <ufo-rocks_resource-icon
      cls="previewIcon"
      ext="exe"
      size="xl"
    />
    <div
      class="noPreviewFileName"
    >
      some-file.exe
    </div>
  </div>
</div>
`;

exports[`preview - not viewable, can download 1`] = `
<div
  class="noPreview"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
    <lego-components_button
      classname="iconButton"
      disabled="false"
      icon="className => /*#__PURE__*/_react.default.createElement(_download.default, {
  iconSize: \\"l\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    />
  </div>
  <div
    class="noPreviewCentered"
  >
    <ufo-rocks_resource-icon
      cls="previewIcon"
      ext="exe"
      size="xl"
    />
    <div
      class="noPreviewFileName"
    >
      some-file.exe
    </div>
  </div>
</div>
`;

exports[`preview - not viewable, can save 1`] = `
<div
  class="noPreview"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
    <lego-components_button
      classname="iconButton iconButtonRight"
      disabled="false"
      icon="className => /*#__PURE__*/_react.default.createElement(_logo.default, {
  iconSize: \\"l\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    />
  </div>
  <div
    class="noPreviewCentered"
  >
    <ufo-rocks_resource-icon
      cls="previewIcon"
      ext="exe"
      size="xl"
    />
    <div
      class="noPreviewFileName"
    >
      some-file.exe
    </div>
  </div>
</div>
`;

exports[`preview - not viewable, no actions 1`] = `
<div
  class="noPreview"
>
  <div
    class="embedActions"
  >
    <lego-components_button
      classname="backButton"
      iconleft="className => /*#__PURE__*/_react.default.createElement(_resourceIcon.default, {
  type: \\"dir_back\\",
  cls: className
})"
      onclick="function () { [native code] }"
      size="m"
      view="clear"
    >
      <span>
        Назад
      </span>
    </lego-components_button>
  </div>
  <div
    class="noPreviewCentered"
  >
    <ufo-rocks_resource-icon
      cls="previewIcon"
      ext="exe"
      size="xl"
    />
    <div
      class="noPreviewFileName"
    >
      some-file.exe
    </div>
  </div>
</div>
`;

exports[`preview - viewable 1`] = `
<div
  class="preview"
>
  <iframe
    class="previewIframe"
    src="/restart?*=token&lang=en&name=some-file.docx&archive-path=%2F%2Fsome-file.docx&embed=dv"
  />
</div>
`;
